[gd_scene load_steps=2 format=3 uid="uid://pause_menu_uid"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_script"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_script")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "RESUME"

[node name="SettingsButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SETTINGS"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "MAIN MENU"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "QUIT GAME"

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS"
horizontal_alignment = 1

[node name="MusicLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.7

[node name="SFXLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.8

[node name="Spacer" type="Control" parent="SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BackButton" type="Button" parent="SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "BACK"
